refactor: simplify retrieval syntax of last guess in ConnectionsController